[index] fixes padding issue and removes overflow caused by ul,ol elements

--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -17,6 +17,7 @@
 
 html, body {
   margin: 0;
+  margin-right: 22px;
   width: 100%;
   background-color: #131f43;
 }
@@ -25,7 +26,7 @@ html, body {
   display: -webkit-flex;
   font-family: 'Raleway Dots', 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica';
   padding-top: 0em;
-  padding-left: 22px;
+  /*padding-left: 22px;*/
   display: flex;
   width: 100%;
   color: white;
@@ -41,6 +42,10 @@ html, body {
 
 a {
   text-decoration: none;
+}
+
+ul, ol {
+  padding-left: 0px;
 }
 
 section #services {
@@ -92,7 +97,7 @@ footer {
   display: -webkit-flex;
   font-family: 'Raleway', 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica';
   padding-top: 1.4em;
-  padding-left: 22px;
+  /*padding-left: 22px;*/
   padding-bottom: 22px;
   display: flex;
   width: 100%;
@@ -307,6 +312,7 @@ i {
     opacity: 0.7;
 
 }
+
 
 .hrgrad {
     border: 0;
